<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.firstaidapp.MainMenu">

    <TextView
        android:id="@+id/wybierz_kategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/b0"
        android:textColor="#c62828"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40sp" />
    <Button
        android:id="@+id/b1"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wybierz_kategorie"
        android:onClick="oneButton"
        android:text="@string/b1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b2"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b1"
        android:onClick="twoButton"
        android:text="@string/b2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b2"
        android:onClick="threeButton"
        android:text="@string/b3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b4"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b3"
        android:onClick="fourButton"
        android:text="@string/b4"
        android:textSize="20sp" />


    <Button
        android:id="@+id/b5"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@+id/b1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="fiveButton"
        android:text="@string/b5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b6"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_above="@+id/b7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="sixButton"
        android:text="@string/b6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b7"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/b3"
        android:layout_marginBottom="20dp"
        android:onClick="sevenButton"
        android:text="@string/b7"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b8"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/b4"
        android:onClick="eightButton"
        android:text="@string/b8"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b9"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_below="@+id/b4"
        android:onClick="nineButton"
        android:text="@string/b9"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b10"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/b8"
        android:layout_alignStart="@+id/b8"
        android:layout_alignTop="@+id/b9"
        android:layout_below="@id/b8"
        android:onClick="tenButton"
        android:text="@string/b10"
        android:textSize="20sp" />




</RelativeLayout>


